Added some styling

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Reddit Image Viewer"
+      name="Reddit Viewer"
       content="Simple Reddit Image Viewer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 
     <title>Reddit Viewer</title>
+    <style>
+      body {
+        font-family: 'Roboto';
+        font-size: 22px;
+        background-color: #1d1e22;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
